--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "beta-build": "npx vite build --base=https://ranndy.com/beta/"
   },
   "dependencies": {
     "lucide-react": "^0.475.0",
