--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "beta-build": "npx vite build --base=https://ranndy.com/beta/ && fish deploy.fish"
   },
   "dependencies": {
+    "chart.js": "^4.4.8",
     "lucide-react": "^0.475.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-widgets": "^5.8.6"
